Update TaskAssignment.java